--- a/sycl/streamcluster/README
+++ b/sycl/streamcluster/README
@@ -1,13 +1,15 @@
 Notes
-
-Use the C++17 std::optional for the case that a set of empty SYCL buffers are declared in the C/C++ global space and then they are allocated once when the pgain function is called for the first time. 
+streamcluster_cl.h contains the SYCL implementation. We use the C++17 std::optional [1]
+for the case that a set of empty SYCL buffers are declared in the C/C++ global space 
+and then they are allocated once when the pgain function is called for the first time. 
 Alternatively, they can be allocated whenever the pgain function is called. It may be inefficient in terms of performance.
 
-Profiling is not enabled by default in the SYCL version because task synchronization can be managed by the SYCL runtime
-
-Compiler warnings with -Wall are removed  
+Profiling is not enabled because of implicit data transfer using the SYCL accessors. 
+We measure the total execution time of the funciton "streamCluster".
 
 =========================================================================================================================================== 
+[1]
+
 Written by Nevin Liber 
 
 A SYCL buffer is typed memory, and as such takes template parameters, the first of which is the type.  Also, there are no allocate() or resize() methods, although you could accomplish this by assigning a new buffer over the old one.
